# anirenderer

./: .gitignore  CMakeLists.txt  README.md  br_target.sh  configure_and_build.sh  main.cpp
application/: CMakeLists.txt  application.cpp  application.h
camera/: CMakeLists.txt  camera.cpp  camera.h
camera/tests/: test_camera.cpp
examples/: CMakeLists.txt  glm_exp  glm_exp.cpp  starfield.cpp
latex/: bibl.bib  commands.sty  cp1_report.tex  packages.sty  presentation-plan.txt  presentation.tex
primitive_renderer/: CMakeLists.txt  edge_walk.cpp  edge_walk.h  gradients.cpp  gradients.h  lights.cpp  lights.h  primitive_renderer.cpp  primitive_renderer.h  primitives.cpp  primitives.h  texture.cpp  texture.h
primitive_renderer/tests/: test_clipping.cpp  test_primitive_renderer_cube.cpp  test_primitive_renderer_points.cpp  test_primitive_renderer_segments.cpp  test_primitive_renderer_transformations.cpp  test_primitive_renderer_triangles.cpp  test_textures.cpp
renderer/: CMakeLists.txt  model.cpp  model.h  renderer.cpp  renderer.h
renderer/tests/: test_model.cpp
type_erasure/: CMakeLists.txt  erased_type.h
type_erasure/tests/: test_erasure.cpp
utility/: CMakeLists.txt  array2d.h  debug.h  image.cpp  image.h  math.h  random.cpp  random.h  utility.h
window/: CMakeLists.txt  window.cpp  window.h
window/tests/: test_window.cpp
